# rustyFetch

./: Cargo.toml  LICENSE  README.md  config.conf  ubuntu.txt
src/: ascii.rs  color.rs  config.rs  main.rs  test.rs  utils.rs  yaml.rs
