[package]
name = "neofetch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
chrono = "0.4.23"
regex = "1.7.1"
#battery = "0.7.8"
#smartcore = {version ="0.3.0" , features=["serde"]}
prettytable = "0.10.0"
termion = "2.0.1"
colored = "2.0.0"
hostname = "0.3.1"
serde = "1.0.152"
serde_yaml = "0.9.16"
serde_derive = "1.0.152"
columns = "0.1.0"
whoami = "1.1.2"
sysinfo = "0.27.2"