[package]
name = "rustyfetch"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.10"

serde_json = "1.0.91"
regex = "1.7.1"
prettytable = "0.10.0"
whoami = "1.1.2"
sysinfo = "0.27.2"
confy = "0.5.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde-enum = "0.1.4"